--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "framer-motion": "^12.6.2",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.454.0",
     "package": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.16.0",
+    "react-odometerjs": "^3.1.3",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6"
   },
