--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "aos": "^2.3.4",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.454.0",
     "package": "^1.0.1",
